[workspace]
members = ["packages/*", "contracts/*", "tests"]

[workspace.package]
version    = "1.0.0"
edition    = "2021"
license    = "GPL 3.0"
repository = "https://github.com/public-awesome/swap"

[workspace.dependencies]
anyhow              = "1"
sg-swap             = { path = "./packages/swap", default-features = false }
wynd-curve-utils    = { git = "https://github.com/cosmorama/wynddao.git", tag = "v1.4.0", package = "wynd-utils" }
cw20-base           = { version = "1.0", package = "cw20-base", features = ["library"] }
sg-swap-factory     = { path = "./contracts/factory" }
cw-placeholder      = { path = "./contracts/cw-placeholder" }
sg-swap-pair        = { path = "./contracts/pair" }
sg-swap-pair-stable = { path = "./contracts/pair_stable" }
sg-swap-multi-hop   = { path = "./contracts/multi-hop" }
sg-swap-stake       = { path = "./contracts/stake" }
cosmwasm-schema     = "1.1"
cosmwasm-std        = "1.1"
cw2                 = "1.0"
cw20                = "1.0"
cw721               = { git = "https://github.com/CosmWasm/cw-nfts" }
cw721-base          = { git = "https://github.com/CosmWasm/cw-nfts" }
cw-controllers      = "1.0"
cw-multi-test       = "0.16"
cw-storage-plus     = "1.0"
cw-utils            = "1.0"
derivative          = "0.3"
itertools           = "0.10"
proptest            = "1.0"
schemars            = "0.8.10"
serde               = { version = "1", default-features = false, features = ["derive"] }
thiserror           = "1"
test-case           = "2.2.1"
uint                = "0.9"

[profile.release.package.sg-swap-factory]
codegen-units = 1
incremental   = false

[profile.release.package.sg-swap-multi-hop]
codegen-units = 1
incremental   = false

[profile.release.package.sg-swap-pair]
codegen-units = 1
incremental   = false

[profile.release.package.sg-swap-pair-stable]
codegen-units = 1
incremental   = false

[profile.release.package.sg-swap-stake]
codegen-units = 1
incremental   = false

[profile.release.package.cw-placeholder]
codegen-units = 1
incremental   = false

[profile.release.package.gauge-adapter]
codegen-units = 1
incremental   = false

[profile.release.package.cw-splitter]
codegen-units = 1
incremental   = false

[profile.release.package.nominated-trader]
codegen-units = 1
incremental   = false

[profile.release]
rpath            = false
lto              = true
overflow-checks  = true
opt-level        = 3
debug            = false
debug-assertions = false
strip            = true
