[package]
name    = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow            = { workspace = true }
cosmwasm-schema   = { workspace = true }
cosmwasm-std      = { workspace = true }
cw-multi-test     = { workspace = true }
cw20              = { workspace = true }
cw20-base         = { workspace = true }
sg-swap           = { workspace = true }
sg-swap-factory   = { workspace = true }
sg-swap-multi-hop = { workspace = true }
sg-swap-pair      = { workspace = true }
sg-swap-stake     = { workspace = true }
