[package]
name        = "sg-swap-multi-hop"
version     = { workspace = true }
authors     = ["Cosmorama <cosmorama@proton.me>"]
edition     = { workspace = true }
description = "Stargaze Swap Multi-hop - provides multi-hop swap functionality for pools"
license     = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library    = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-storage-plus = { workspace = true }
cw2             = { workspace = true }
cw20            = { workspace = true }
thiserror       = { workspace = true }
sg-swap         = { workspace = true }

[dev-dependencies]
anyhow          = { workspace = true }
cw-multi-test   = { workspace = true }
cw20-base       = { workspace = true }
sg-swap-factory = { workspace = true }
sg-swap-pair    = { workspace = true }
sg-swap-stake   = { workspace = true }
